# izeberg-test

./: .env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  izeberg.postman_collection.json
config-tools/: .hadolint.yaml  .markdownlint.yml  .yamllint.yaml  black.toml
scripts/: cmd.sh
src/: db.sqlite3  manage.py  poke_api_accessor.py  setup.cfg
src/group_management/: admin.py  urls.py
src/group_management/migrations/: 0001_initial.py  0002_delete_typegroup_alter_usertype_group_type_and_more.py
src/group_management/models/: type_group.py  user_type.py
src/group_management/serializers/: type_group.py  user_type.py
src/group_management/views/: add_to_group.py  remove_to_group.py
src/poke-izeberg/: asgi.py  settings.py  urls.py  wsgi.py
src/poke_izeberg/: asgi.py  settings.py  urls.py  wsgi.py
src/pokemon/: admin.py  urls.py
src/pokemon/migrations/: 0001_initial.py
src/pokemon/models/: type_group.py
src/pokemon/serializers/: type_group.py
src/pokemon/views/: poke_list.py  pokemon_acces.py
src/user_auth/: urls.py  views.py
src/user_auth/views/: auth.py  profile.py
