[metadata]
name = iseberg_pokeapi
version = 1.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    django==4.1.7
    djangorestframework==3.14.0
    requests==2.28.2
python_requires = >=3.11

[options.extras_require]
production =
    uWSGI==2.0.21

[flake8]
ban-relative-imports = True
count = True
exclude = .git,__pycache__
extend-ignore =
    E203
hang-closing = False
ignore = E203,W503
max-complexity = 15
max-line-length = 120
select = B,C,E,F,W,T4,B9
statistics = True
mypy_config = ./config-tools/setup.cfg

[mypy]
cache_dir = /dev/null
check_untyped_defs = True
disallow_any_decorated = False
disallow_any_expr = False
disallow_any_generics = False
disallow_incomplete_defs = True
disallow_any_unimported = False
disallow_subclassing_any = False
dump_type_stats = True
follow_imports = normal
ignore_missing_imports = True
no_implicit_optional = True
no_implicit_reexport = True
no_incremental = False
no_strict_optional = True
pretty = True
python_version = 3.9
show_absolute_path = True
show_column_numbers = True
show_error_codes = True
show_error_context = True
show_traceback = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = False
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-*]
check_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
warn_no_return = True

[pylint]
fail-under = 9
jobs = 0
max-args = 10
max-line-length = 120
max-module-lines = 300
min-similarity-lines = 4
output-format = colorized
persistent = yes
reports = yes
score = yes
suggestion-mode = yes
ignore-imports = no
ignore = CVS
load-plugins =
    pylint.extensions.check_elif,
    pylint.extensions.bad_builtin,
    pylint.extensions.docparams,
    pylint.extensions.for_any_all,
    pylint.extensions.set_membership,
    pylint.extensions.code_style,
    pylint.extensions.overlapping_exceptions,
    pylint.extensions.typing,
    pylint.extensions.redefined_variable_type,
    pylint.extensions.comparison_placement,
    pylint.extensions.mccabe,
unsafe-load-any-extension = no
py-version = 3.9
limit-inference-results = 100

[pylint.FORMAT]
max-line-length = 120

[pylint.MESSAGES CONTROL]
enable =
    use-symbolic-message-instead,
    useless-suppression,
disable =
    attribute-defined-outside-init,
    invalid-name,
    missing-docstring,
    protected-access,
    too-few-public-methods,
    format,
    fixme,
    cyclic-import,
    import-error,

[pylint.MISCELLANEOUS]
notes = FIXME,XXX,TODO

[pylint.SIMILARITIES]
ignore-comments = yes
ignore-docstrings = yes
ignore-imports = yes
ignore-signatures = yes
min-similarity-lines = 6

[uwsgi]
chdir = /poke-izeberg-app
module = poke_izeberg.wsgi:application
master = True
pidfile = /tmp/poke_izeberg.pid
socket = /socket/poke_izeberg.socket
vacuum = True
max-requests = 5000
daemonize = /var/log/uwsgi/poke_izeberg.log
